# ast

./: CLAUDE.md  CMakeLists.txt  Notes  PLAN.md  README.md  ast.news  configure.ac
.github/workflows/: build.yml  cmake.yaml  coverage.yaml
ast_tester/: .gitignore  CMakeLists.txt  aitoff.grid  aitoff.native  ast_astequal.c  ast_tester  car1.grid  car1.native  car2.grid  car3.grid  car3.native  car4.grid  car4.native  car5.grid  car5.native  car6.grid  car6.native  cobe.grid  cobe.native  grid_tests.txt  hpx.grid  hpx.native  jan.ast  jan.fits-class  origin.grid  origin.native  polco.grid  polco.native  scp.grid  scp.native  serpens.grid  serpens.native  simplify.c  simplify_tests.txt  specflux.grid  specflux.native  test_bbox_values.c  testaxis.c  testchannel.c  testchebymap.c  (+58 more)
cmake/: ast.pc.in  astConfig.cmake.in  config.h.cmake.in  gen_ast_err_h.cmake  gen_ast_h.sh  gen_ast_par.cmake  run_grid_test.cmake  run_plotter_test.cmake  run_simplify_astequal_test.cmake  run_simplify_test.cmake  run_wcsconverter_astequal_test.cmake  run_wcsconverter_test.cmake  sae_par.h  version.h.cmake.in
cmake/star/: mers.h
docs/superpowers/plans/: 2026-04-16-wcsconverter-c-port.md
docs/superpowers/specs/: 2026-04-16-wcsconverter-c-port-design.md
src/: cmpframe.c  dssmap.c  ellipse.c  ellipse.h  fitschan.c  fitschan.h  fitstable.c  grf3d_plplot.c  grf_log.c  grf_log.h  grf_plplot.c  grf_plplot.h  keymap.c  mathmap.c  memory.c  moc.c  mocchan.c  object.h.in  permmap.c  pl3d.h  plot.c  stcschan.c  xmlchan.c  yamlchan.c
wcslib/: proj.c  tpn.c  wcstrig.c
